--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,13 +1,8 @@
-# ASP.NET Core
-# Build and test ASP.NET Core projects targeting .NET Core.
-# Add steps that run tests, create a NuGet package, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
-
 trigger:
-- '*'
-
+  - '*'
+  
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'ubuntu-18.04'
   demands:
   - npm
 
@@ -19,12 +14,12 @@ steps:
   displayName: 'Use .NET Core SDK 3.1.100'
   inputs:
     packageType: sdk
-    version: 3.1.00
+    version: 3.1.100
 
 - task: Npm@1
   displayName: 'Run npm install'
   inputs:
-    verbose: false # verbose???
+    verbose: false
 
 - script: './node_modules/.bin/node-sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'
   displayName: 'Compile Sass assets'
